--- a/maket/src/pages/particles/preview_case.html
+++ b/maket/src/pages/particles/preview_case.html
@@ -1,8 +1,10 @@
 <div class="preview_case">
-    <div class="preview_case-date">{{ case.date }}</div>
-    <div class="preview_case-title">
-        <div class="type">{{ case.type }}</div>
-        <div class="name">{{ case.name }}</div>
+    <div class="transform">
+        <div class="preview_case-date">{{ case.date }}</div>
+        <div class="preview_case-title">
+            <div class="type">{{ case.type }}</div>
+            <div class="name">{{ case.name }}</div>
+        </div>
     </div>
     <div class="preview_case-content">
         <div class="description">
