--- a/maket/src/pages/particles/sections/main.html
+++ b/maket/src/pages/particles/sections/main.html
@@ -22,7 +22,7 @@
                             date: 2020,
                             type: 'Возврат активов',
                             name: 'Candy Bank',
-                            description: 'Принимая во внимание показатели успешности, курс на национальный проект обеспечивает актуальность требований.'
+                            description: 'Принимая во внимание показатели asdfsdfsd fsd fsdf sd fd fsdfsdfsdfsdf sdfs df успешности, курс на национальный проект обеспечивает актуальность требований.'
                         },
                         {
                             date: 2019,
@@ -40,7 +40,10 @@
                 {% endfor %}
                 
                 <div class="show-case__col last">
-                    <a href="#" class="btn btn-arrow">Все кейсы</a>
+                    <a href="#" class="show-case--arrow">
+                        <span></span>
+                        Все кейсы
+                    </a>
                 </div>
             </div>
         </div>
