--- a/maket/src/pages/particles/sections/what-doing.html
+++ b/maket/src/pages/particles/sections/what-doing.html
@@ -1,6 +1,19 @@
 <section class="section">
     <div class="section__what-doing">
         {% include "./../top-line.html" %}
-        section__what-doing
+        <div class="container">
+            <h2 class="title__section title__section--gray text-center">Что мы делаем</h2>
+            <div class="what-doing__list">
+                <div class="what-doing__list-item">
+                    <a href="#">Cудебные споры</a>
+                </div>
+                <div class="what-doing__list-item">
+                    <a href="#">Банкротство</a>
+                </div>
+                <div class="what-doing__list-item">
+                    <a href="#">Строительство</a>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
