--- a/maket/src/pages/particles/preview_case.html
+++ b/maket/src/pages/particles/preview_case.html
@@ -1,4 +1,4 @@
-<div class="preview_case">
+<div class="preview_case {{ case.class }}">
     <div class="transform">
         <div class="preview_case-date">{{ case.date }}</div>
         <div class="preview_case-title">
