--- a/maket/src/pages/particles/sections/main.html
+++ b/maket/src/pages/particles/sections/main.html
@@ -16,19 +16,22 @@
                             date: 2021,
                             type: 'Банкротство',
                             name: 'ООО “Петя и леденцы”',
-                            description: 'Принимая во внимание показатели успешности, курс на национальный проект обеспечивает актуальность требований.'
+                            description: 'Принимая во внимание показатели успешности, курс на национальный проект обеспечивает актуальность требований.',
+                            class: 'blue'
                         },
                         {
                             date: 2020,
                             type: 'Возврат активов',
                             name: 'Candy Bank',
-                            description: 'Принимая во внимание показатели asdfsdfsd fsd fsdf sd fd fsdfsdfsdfsdf sdfs df успешности, курс на национальный проект обеспечивает актуальность требований.'
+                            description: 'Принимая во внимание показатели asdfsdfsd fsd fsdf sd fd fsdfsdfsdfsdf sdfs df успешности, курс на национальный проект обеспечивает актуальность требований.',
+                            class: 'green'
                         },
                         {
                             date: 2019,
                             type: 'Представительство в суде',
                             name: 'ОАО “Норильский карамельный завод”',
-                            description: 'Принимая во внимание показатели успешности, курс на национальный проект обеспечивает актуальность требований.'
+                            description: 'Принимая во внимание показатели успешности, курс на национальный проект обеспечивает актуальность требований.',
+                            class: 'red'
                         },
                     ] 
                 %}
