--- a/maket/src/pages/particles/top-line.html
+++ b/maket/src/pages/particles/top-line.html
@@ -12,6 +12,13 @@
                     <ul>
                         <li>
                             <a href="#">Что мы делаем</a>
+                            <ul class="sub-menu">
+                                <li>
+                                    <a href="#">Судебные споры</a>
+                                    <a href="#">Банкротство</a>
+                                    <a href="#">Строительство</a>
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <a href="#">Кейсы</a>
